@@ -448,7 +448,8 @@ class SPCMesoActivity : VideoRecordActivity(), OnClickListener, OnMenuItemClickL
     }
 
     override fun onClick(v: View) {
-        when (v.id) {R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
+        when (v.id) {
+            R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
         }
     }
 
