@@ -199,7 +199,8 @@ class SPCSoundingsActivity : BaseActivity(), OnClickListener, OnItemSelectedList
     override fun onNothingSelected(parent: AdapterView<*>) {}
 
     override fun onClick(v: View) {
-        when (v.id) {R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
+        when (v.id) {
+            R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
         }
     }
 
