@@ -16,6 +16,7 @@
 
 package joshuatee.wx.ui
 
+import android.annotation.SuppressLint
 import android.content.Context
 import android.graphics.Canvas
 import android.graphics.Color
@@ -173,6 +174,7 @@ class SVBar : View {
         mSVToPosFactor = mBarLength.toFloat() / 2 / 1
     }
 
+    @SuppressLint("SwitchIntDef")
     override fun onMeasure(widthMeasureSpec: Int, heightMeasureSpec: Int) {
         val intrinsicSize = mPreferredBarLength + mBarPointerHaloRadius * 2
         // Variable orientation
