@@ -723,7 +723,8 @@ class USNWSGOESActivity : VideoRecordActivity(), OnClickListener, OnItemSelected
     override fun onNothingSelected(parent: AdapterView<*>) {}
 
     override fun onClick(v: View) {
-        when (v.id) {R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
+        when (v.id) {
+            R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
         }
     }
 
