@@ -82,7 +82,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:textSize="@dimen/listitem_text"
-                                android:inputType="textMultiLine" />
+                                android:inputType="textMultiLine"
+                                />
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
