@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.2.71' // -release-Studio3.2-1
+    ext.kotlin_version = '1.3.0' // -release-Studio3.2-1
     //ext.supportLibraryVersion = "27.1.1"
     //ext.supportLibraryVersion = "28.0.0-beta1"
     ext.okHttpVersion = "3.11.0"
